2008-03-26  Murray Cumming  <murrayc@murrayc.com>

	* examples/schemavalidation/Makefile.am: Corrected a filename to 
	fix distcheck
	* libxml++/schema.h:
	* libxml++/validators/schemavalidator.h: Added the newin2p24 doxygen 
	keyword.

2008-03-26  Emilien KIA  <cursor@free.fr>

	* configure.in:
	* libxml++/Makefile.am:
	* libxml++/libxml++.h:
	* libxml++/schema.cc:
	* libxml++/schema.h: Added Schema class, similar to the existing Dtd 
	class.
	* libxml++/validators/Makefile.am:
	* libxml++/validators/schemavalidator.cc
	* libxml++/validators/schemavalidator.h: Added Schema validator class, 
	similar to the existing DtdValidator class.

	* examples/Makefile.am:
	* examples/schemavalidation/: New example, similar to the 
	existing dtdvalidation example.

	Bug #312216.

2008-03-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/Makefile.am: Fixed the post-html rule.
	* docs/index.html: Corrected some links.
	* libxml++/nodes/node.h: Corrected documentation for the new methods 
	from the previous commit.

2008-03-26  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/nodes/element.cc:
	* libxml++/nodes/element.h: Added add_child_text() with a previous_node 
	parameter, for adding between existing nodes.
	Added add_child_text_before() too.
	* libxml++/nodes/node.cc:
	* libxml++/nodes/node.h: Added add_child() with a previous_node 
	parameter, for adding between existing nodes.
	Added add_child_before() too.

	* docs/index.html: Removed the license clarifications text because I 
	always found it to be arbitrary and not very informative.
	* docs/reference/Doxyfile.in: Added a newin2p24 doxygen keyword. 
	* docs/reference/Makefile.am: Do not create a version-specific 
	directory name for reference documentation. The Since: text and links 
	in the documentation are enough to know what was in what version.

This is the svn trunk branch. See also the gnome-2-22 branch.

2.22.0:

2008-03-07  Deng Xiyue  <murrayc@murrayc.com>

	* libxml++/document.cc: